--- a/src/pages/blog-posts/index.astro
+++ b/src/pages/blog-posts/index.astro
@@ -89,7 +89,7 @@ const years = [...new Set(sortedPosts.map((post: any) => new Date(post.date).get
             >
               <div>
                 <div class="flex flex-row justify-between">
-                  <h2 class="text-lg">{post.title}</h2>
+                  <h2 class="text-xl">{post.title}</h2>
                   <small class="text-xs text-gray-600">{moment(post.date).format("DD/MM/YY")}</small>
                 </div>
                 
