--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -22,7 +22,7 @@ const portfolioItems = await getAllPortfolioItems();
                 itemtype="http://schema.org/Article"
               >
                 <header>
-                  <h2>
+                  <h2 class="text-xl">
                     <a href={"/portfolio/" + item.slug}>{item.title}</a>
                   </h2>
                 </header>
