--- a/src/pages/workshop/gaming/index.astro
+++ b/src/pages/workshop/gaming/index.astro
@@ -15,7 +15,7 @@ import BaseLayout from '../../../layouts/BaseLayout.astro';
       <div class="col-md-6 mb-4">
         <article class="post-list-item">
           <header>
-            <h2>
+            <h2 class="text-xl">
               <a href="/workshop/gaming/stardew-valley">Stardew Valley</a>
             </h2>
           </header>
