--- a/src/pages/workshop/gaming/stardew-valley.astro
+++ b/src/pages/workshop/gaming/stardew-valley.astro
@@ -5,7 +5,7 @@ import BaseLayout from '../../../layouts/BaseLayout.astro';
 <BaseLayout title="Stardew Valley" description="My Stardew Valley guides and resources">
   <div class="container gaming-item-content">
     <article>
-        <h2 class="text-2xl">Stardew Valley</h2>
+        <h2 class="text-xl">Stardew Valley</h2>
       
       <section>
         <div class="row">
