--- a/src/pages/workshop/index.astro
+++ b/src/pages/workshop/index.astro
@@ -3,32 +3,34 @@ import BaseLayout from '../../layouts/BaseLayout.astro';
 ---
 
 <BaseLayout title="Workshop" description="My workshop!">
-  <div class="container workshop-list">
+  <div class="workshop-list">
     <div class="row">
-      <h2>Welcome to my workshop!</h2>
+      <h2 class="text-xl">Welcome to my workshop!</h2>
       
       <p>This is a personal workspace, you can see what I'm currently working on, as well as my recipe bank, musings about any current reads, talking about any obsessions with what I'm listening to as well as personal guides and notes for any games that I play.</p>
       <p>I will be updating this page as I go, so expect it to be a work in progress.</p>
     </div>
     
-    <div class="row">
-      <div class="col">
-        <a class="workshop-link" href="/portfolio/">
-          <div><p>Portfolio</p></div>
-        </a>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <a class="workshop-link" href="/workshop/recipes/">
-          <div><p>Recipes</p></div>
-        </a>
-      </div>
-      <div class="col">
-        <a class="workshop-link" href="/workshop/gaming/">
-          <div><p>Gaming</p></div>
-        </a>
-      </div>
+    <div class="grid grid-cols-2 gap-3 mt-5">
+      <a class="workshop-link col-span-2 font-md" href="/portfolio/">
+        <div><p class="font-bold">Portfolio</p></div>
+      </a>
+
+      <a class="workshop-link" href="/workshop/recipes/">
+        <div><p>Recipes</p></div>
+      </a>
+
+      <a class="workshop-link" href="/workshop/gaming/">
+        <div><p>Gaming</p></div>
+      </a>
+
+      <a class="workshop-link-disabled" aria-disabled>
+        <div><p>Reading</p></div>
+      </a>
+
+      <a class="workshop-link-disabled" aria-disabled>
+        <div><p>Listening</p></div>
+      </a>
     </div>
   </div>
 </BaseLayout>
