--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,7 +10,7 @@
 @use "./partials/_navbar" as *;
 @use "./partials/_footer" as *;
 @use "./partials/_portfolio" as *;
-@use "./partials/_workshop" as *;
+@use "./partials/_digitalGarden" as *;
 @use "./partials/_wordCloud" as *;
 @use "./partials/_recipe" as *;
 @use "./partials/_sign" as *;
