--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ const recentPortfolioItem = portfolioItems.length > 0 ? portfolioItems[0] : null
   />
   <div class="text-center">
     <p> ✨ Hello and welcome to my site! ✨ </p>
-    <p>This site is a true labour of love - I'm still working on the content but in the meantime, you can check out my blog, workshop or some of my latest additions below!</p>
+    <p>This site is a true labour of love - I'm still working on the content but in the meantime, you can check out my blog, digital garden or some of my latest additions below!</p>
   </div>
 
   <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
@@ -33,7 +33,7 @@ const recentPortfolioItem = portfolioItems.length > 0 ? portfolioItems[0] : null
         <div class="bg-gray-50 dark:bg-gray-800 p-6 rounded-lg">
           <h2 class="text-xl font-semibold mb-3">Latest Recipe...</h2>
           <h3 class="text-lg font-bold text-center">
-            <a href={`/workshop/recipes/${recentRecipe.slug}`}>
+            <a href={`/digital-garden/recipes/${recentRecipe.slug}`}>
               {recentRecipe.name} →
             </a>
           </h3>
