--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -22,7 +22,7 @@ const isRootPath = pathname === '/';
     <SEO title={title} description={description} />
     
     <!-- Tinylytics -->
-    <script defer src="https://tinylytics.app/embed/your-site-id.js"></script>
+    <script src="https://tinylytics.app/embed/XpJY1f7mwvZcsmaUenvF.js" defer></script>
 
     <script is:inline>
       const getThemePreference = () => {
