FEAT Updates to pages to include more reach components and blog tags

--- a/src/styles/partials/_blog.scss
+++ b/src/styles/partials/_blog.scss
@@ -83,7 +83,7 @@
   }
 
   a {
-    border: 2px dashed var(--color-accent-light);
+    border: 2px solid var(--color-accent-light);
     padding: var(--spacing-2);
     border-radius: var(--spacing-2);
   }
