IMP Add blogs to digital garden and correct filter colour on Recipes

--- a/src/pages/digital-garden/index.astro
+++ b/src/pages/digital-garden/index.astro
@@ -12,7 +12,10 @@ import BaseLayout from '../../layouts/BaseLayout.astro';
     </div>
     
     <div class="grid grid-cols-2 gap-3 mt-5">
-      <a class="digital-garden-link col-span-2 font-md" href="/portfolio/">
+      <a class="digital-garden-link font-md" href="/blog-posts/">
+        <div><p class="font-bold">Blog</p></div>
+      </a>
+      <a class="digital-garden-link font-md" href="/portfolio/">
         <div><p class="font-bold">Portfolio</p></div>
       </a>
 
