--- a/src/pages/digital-garden/recipes/index.astro
+++ b/src/pages/digital-garden/recipes/index.astro
@@ -14,7 +14,7 @@ const letters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'.split('');
       <div class="flex flex-row">
         <button
           id="toggleSearch"
-          class="my-auto ml-2 px-3 py-2 bg-[var(--color-primary)] text-white rounded-lg hover:opacity-90 focus:outline-none"
+          class="my-auto ml-2 px-3 py-2 bg-[var(--color-primary)] text-white rounded-lg hover:bg-[var(--color-highlight)] focus:outline-none"
           aria-label="Toggle search"
         >
           <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -52,7 +52,7 @@ const letters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'.split('');
             />
             <button
               id="searchBtn"
-              class="px-4 py-2 bg-[var(--color-primary)] text-white rounded-lg hover:opacity-90 focus:outline-none"
+              class="px-4 py-2 bg-[var(--color-primary)] text-white rounded-lg hover:bg-[var(--color-highlight)] focus:outline-none"
             >
               Search
             </button>
