IMP Accessibility updates

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -108,7 +108,7 @@
   --card-foreground: oklch(0.985 0 0);
   --popover: oklch(0.2 0.05 240);
   --popover-foreground: oklch(0.985 0 0);
-  --primary: #66BB6A;
+  --primary: #157E1C;
   --primary-foreground: oklch(0.141 0.005 285.823);
   --secondary: #BA68C8;
   --secondary-foreground: oklch(0.985 0 0);
