--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -60,7 +60,7 @@
   --card-foreground: oklch(0.141 0.005 285.823);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.141 0.005 285.823);
-  --primary: #4CAF50;
+  --primary: #0D8711;
   --primary-foreground: oklch(0.985 0 0);
   --secondary: #881b8b;
   --secondary-foreground: oklch(0.205 0 0);
