IMP Minor update to secondary colour for Light Green Mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -62,7 +62,7 @@
   --popover-foreground: oklch(0.141 0.005 285.823);
   --primary: #0D8711;
   --primary-foreground: oklch(0.985 0 0);
-  --secondary: #881b8b;
+  --secondary: #862070;
   --secondary-foreground: oklch(0.205 0 0);
 }
 
