IMP Update to Kudos to display specific Icon

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -22,7 +22,7 @@ const isRootPath = pathname === '/';
     <SEO title={title} description={description} />
     
     <!-- Tinylytics -->
-    <script src="https://tinylytics.app/embed/XpJY1f7mwvZcsmaUenvF.js?kudos" defer></script>
+    <script src="https://tinylytics.app/embed/XpJY1f7mwvZcsmaUenvF.js?kudos=❤️" defer></script>
 
     <script is:inline>
       const getThemePreference = () => {
