--- a/src/pages/blog-posts/[slug].astro
+++ b/src/pages/blog-posts/[slug].astro
@@ -34,7 +34,7 @@ const blogContentHtml = documentToHtmlString(fullPost.blogContent.json);
             <p class="text-sm text-gray-600 dark:text-gray-400">{moment(fullPost.date).format("MMMM DD, YYYY")}</p>
           </div>
           
-          <button class="tinylytics_kudos" data-path={pathname}>❤️</button>
+          <button class="tinylytics_kudos" data-path={pathname}></button>
         </div>
       </header>
       
