IMP Minor content updates and layout/colour tweaks

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,9 +6,9 @@ import HomeContent from "../components/HomeContent";
 
 <BaseLayout title="Home">
   <SignComponent
-    content="Content Incoming!"
+    content="Content Loading...!"
     containerStyle={{ justifyContent: "center", alignItems: "center" }}
-    signStyle={{ fontSize: "2rem" }}
+    signStyle={{ fontSize: "1.5rem" }}
   />
 
   <HomeContent client:load />
