--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,8 +11,8 @@ const social = {
 };
 ---
 
-<div class="container footer-content mx-auto px-4">
-  <div class="grid grid-cols-2 md:grid-cols-12 gap-4 items-center">
+<div class="footer-content px-4 border-t">
+  <div class="container mx-auto grid grid-cols-2 md:grid-cols-12 gap-4 items-center">
     <div
       class="col-span-1 md:col-span-2 order-2 md:order-1 flex justify-left md:justify-start items-center"
     >
