--- a/src/pages/digital-garden/index.astro
+++ b/src/pages/digital-garden/index.astro
@@ -11,28 +11,46 @@ import BaseLayout from '../../layouts/BaseLayout.astro';
       <p>I will be updating this page as I go, so expect it to be a work in progress.</p>
     </div>
 
-    <div class="grid grid-cols-2 gap-3 mt-5">
+    <div class="grid md:grid-cols-2 gap-3 mt-10">
       <a class="digital-garden-link font-md" href="/blog-posts/">
-        <div><p class="font-bold">Blog</p></div>
+        <div>
+          <img src="/images/flowers/flowers-row.svg" alt="flowers" class="flower-icon">
+          <p class="font-bold">Blog</p>
+        </div>
       </a>
       <a class="digital-garden-link font-md" href="/portfolio/">
-        <div><p class="font-bold">Portfolio</p></div>
+        <div>
+          <img src="/images/flowers/flowers-row.svg" alt="flowers" class="flower-icon">
+          <p class="font-bold">Portfolio</p>
+        </div>
       </a>
 
       <a class="digital-garden-link" href="/digital-garden/recipes/">
-        <div><p>Recipes</p></div>
+        <div>
+          <img src="/images/flowers/flowers-row.svg" alt="flowers" class="flower-icon">
+          <p>Recipes</p>
+        </div>
       </a>
 
       <a class="digital-garden-link" href="/digital-garden/gaming/">
-        <div><p>Gaming</p></div>
+        <div>
+          <img src="/images/flowers/flowers-row.svg" alt="flowers" class="flower-icon">
+          <p>Gaming</p>
+        </div>
       </a>
 
       <a class="digital-garden-link-disabled" aria-disabled>
-        <div><p>Reading</p></div>
+        <div>
+          <img src="/images/flowers/flowers-row.svg" alt="flowers" class="flower-icon">
+          <p>Reading</p>
+        </div>
       </a>
 
       <a class="digital-garden-link-disabled" aria-disabled>
-        <div><p>Listening</p></div>
+        <div>
+          <img src="/images/flowers/flowers-row.svg" alt="flowers" class="flower-icon">
+          <p>Listening</p>
+        </div>
       </a>
     </div>
   </div>
