IMP #15 Initial Reading Shelf

--- a/src/pages/digital-garden/index.astro
+++ b/src/pages/digital-garden/index.astro
@@ -39,8 +39,9 @@ import BaseLayout from '../../layouts/BaseLayout.astro';
         </div>
       </a>
 
-      <a class="digital-garden-link-disabled" aria-disabled>
+      <a class="digital-garden-link" href="/digital-garden/reading/">
         <div>
+          <img src="/images/flowers/flowers-row.svg" alt="flowers" class="flower-icon">
           <p>Reading</p>
         </div>
       </a>
