--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,6 +7,7 @@
 @use "./partials/_about" as *;
 @use "./partials/_typography" as *;
 @use "./partials/_blog" as *;
+@use "./partials/_reading" as *;
 @use "./partials/_navbar" as *;
 @use "./partials/_footer" as *;
 @use "./partials/_portfolio" as *;
