--- a/src/pages/digital-garden/gaming/index.astro
+++ b/src/pages/digital-garden/gaming/index.astro
@@ -14,7 +14,7 @@ import BaseLayout from '../../../layouts/BaseLayout.astro';
     <div class="row mt-4">
       <div class="col-md-6 mb-4">
         <article class="post-list-item">
-          <header>
+          <header class="mt-3">
             <h2 class="text-xl">
               <a href="/digital-garden/gaming/stardew-valley">Stardew Valley</a>
             </h2>
