FIX Correct contentful interface to ensure the right parameters are used

--- a/src/pages/digital-garden/reading/[slug].astro
+++ b/src/pages/digital-garden/reading/[slug].astro
@@ -9,7 +9,7 @@ export const getStaticPaths = (async () => {
   const bookReviews = await getAllBookReviews();
 
   return bookReviews.map((review: any) => ({
-    params: { slug: review.slug },
+    params: { slug: review.sys.id },
     props: { review },
   }));
 }) satisfies GetStaticPaths;
