--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
   <div class="container">    
     <div class="row">
       <div class="flex flex-row">  
-        <img src="https://media.licdn.com/dms/image/v2/D4D03AQEBqft-HYSifg/profile-displayphoto-shrink_200_200/B4DZYQxIdHHwAY-/0/1744038038074?e=1769040000&v=beta&t=EOtnxbIYQsU8ILq8HPNJyrABwjk8Q1jfwrHq5HNKT1I" 
+        <img src="/src/images/real-profile-pic.jpg" 
             alt="Emma Lane" 
             class="w-30 h-30 my-auto mx-auto rounded-full" />
       
