--- a/src/pages/digital-garden/gaming/stardew-valley.astro
+++ b/src/pages/digital-garden/gaming/stardew-valley.astro
@@ -54,7 +54,7 @@ import BaseLayout from '../../../layouts/BaseLayout.astro';
     </article>
   </div>
 
-  <script client:load>
+  <script is:inline>
     function showTab(tabId) {
       console.log('showTab called with:', tabId);
       
