--- a/src/pages/digital-garden/index.astro
+++ b/src/pages/digital-garden/index.astro
@@ -11,6 +11,15 @@ import BaseLayout from '../../layouts/BaseLayout.astro';
       <p>I will be updating this page as I go, so expect it to be a work in progress.</p>
     </div>
 
+    <div class="grid md:grid-cols-1 gap-3 mt-10">
+      <a class="digital-garden-link font-md" href="/portfolio/">
+        <div>
+          <img src="/images/flowers/flowers-row.svg" alt="flowers" class="flower-icon">
+          <p class="font-bold">Portfolio</p>
+        </div>
+      </a>
+    </div>
+
     <div class="grid md:grid-cols-2 gap-3 mt-10">
       <a class="digital-garden-link font-md" href="/blog-posts/">
         <div>
@@ -18,13 +27,6 @@ import BaseLayout from '../../layouts/BaseLayout.astro';
           <p class="font-bold">Blog</p>
         </div>
       </a>
-      <a class="digital-garden-link font-md" href="/portfolio/">
-        <div>
-          <img src="/images/flowers/flowers-row.svg" alt="flowers" class="flower-icon">
-          <p class="font-bold">Portfolio</p>
-        </div>
-      </a>
-
       <a class="digital-garden-link" href="/digital-garden/recipes/">
         <div>
           <img src="/images/flowers/flowers-row.svg" alt="flowers" class="flower-icon">
@@ -38,7 +40,6 @@ import BaseLayout from '../../layouts/BaseLayout.astro';
           <p>Gaming</p>
         </div>
       </a>
-
       <a class="digital-garden-link" href="/digital-garden/reading/">
         <div>
           <img src="/images/flowers/flowers-row.svg" alt="flowers" class="flower-icon">
@@ -49,6 +50,11 @@ import BaseLayout from '../../layouts/BaseLayout.astro';
       <a class="digital-garden-link-disabled" aria-disabled>
         <div>
           <p>Listening</p>
+        </div>
+      </a>
+      <a class="digital-garden-link-disabled" aria-disabled>
+        <div>
+          <p>Watching</p>
         </div>
       </a>
     </div>
