IMP: Minor style update

--- a/src/components/GitCommitsModal.astro
+++ b/src/components/GitCommitsModal.astro
@@ -16,7 +16,7 @@ const commits = gitLog.trim().split('\n').map(line => {
 });
 ---
 
-<button id="open-modal" class="link social-link" aria-label="View Commits">
+<button id="open-modal" class="link social-link cursor-pointer" aria-label="View Commits">
   <FontAwesomeIcon 
     icon={faGithubAlt} 
     size="2x"
